Backend - Added auhtentication handling for flash cards management