@@ -1,14 +1,14 @@
 package io.dondany.fc.flashcard;
 
 import io.dondany.fc.PagedResponseEntity;
+import io.dondany.fc.user.User;
 import lombok.RequiredArgsConstructor;
-import org.apache.coyote.Response;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Pageable;
 import org.springframework.hateoas.server.mvc.BasicLinkBuilder;
-import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
+import org.springframework.security.core.annotation.AuthenticationPrincipal;
 import org.springframework.web.bind.annotation.DeleteMapping;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.PathVariable;
@@ -18,13 +18,11 @@ import org.springframework.web.bind.annotation.RequestBody;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RequestParam;
 import org.springframework.web.bind.annotation.RestController;
-import org.springframework.web.server.ResponseStatusException;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @RestController
-@RequestMapping("projects/{projectId}/collections/{collectionId}/flash-cards")
+@RequestMapping("/api/v1/projects/{projectId}/collections/{collectionId}/flash-cards")
 @RequiredArgsConstructor
 public class FlashCardController {
 
@@ -35,9 +33,10 @@ public class FlashCardController {
     public PagedResponseEntity<FlashCardModel> getFlashCardsByCollection(@PathVariable Long projectId,
                                                                          @PathVariable Long collectionId,
                                                                          @RequestParam(value = "page", defaultValue = "0", required = false) Integer page,
-                                                                         @RequestParam(value = "size", defaultValue = "10", required = false) Integer size) {
+                                                                         @RequestParam(value = "size", defaultValue = "10", required = false) Integer size,
+                                                                         @AuthenticationPrincipal User user) {
         Pageable pageable = PageRequest.of(page, size);
-        Page<FlashCardModel> pagedFlashCards = flashCardService.getAllFlashCards(collectionId, pageable).map(flashCardMapper);
+        Page<FlashCardModel> pagedFlashCards = flashCardService.getAllFlashCards(projectId, collectionId, pageable, user).map(flashCardMapper);
 
         return PagedResponseEntity.from(pagedFlashCards, String.format("%s/projects/%s/collections/%s/flash-cards", baseUri(), projectId, collectionId));
     }
@@ -48,23 +47,23 @@ public class FlashCardController {
         return flashCardService.getAllByCollectionId(collectionId)
                 .stream()
                 .map(flashCardMapper)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @GetMapping("/{id}")
-    public ResponseEntity<FlashCard> getFlashCard(@PathVariable Long projectId,
+    public ResponseEntity<FlashCardModel> getFlashCard(@PathVariable Long projectId,
                                                   @PathVariable Long collectionId,
-                                                  @PathVariable Long id) {
-        return flashCardService.getFlashCard(collectionId, id)
-                .map(fc -> new ResponseEntity<>(fc, HttpStatus.OK))
-                .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND));
+                                                  @PathVariable Long id,
+                                                  @AuthenticationPrincipal User user) {
+        return ResponseEntity.ok(flashCardMapper.apply(flashCardService.getFlashCard(projectId, collectionId, id, user)));
     }
 
     @PostMapping()
     public ResponseEntity<FlashCardModel> addFlashCard(@PathVariable Long projectId,
-                                                @PathVariable Long collectionId,
-                                                @RequestBody FlashCard flashCard) {
-        FlashCard created = flashCardService.addFlashCard(projectId, collectionId, flashCard);
+                                                       @PathVariable Long collectionId,
+                                                       @RequestBody FlashCard flashCard,
+                                                       @AuthenticationPrincipal User user) {
+        FlashCard created = flashCardService.addFlashCard(projectId, collectionId, flashCard, user);
         return ResponseEntity.ok(flashCardMapper.apply(created));
     }
 
@@ -72,14 +71,17 @@ public class FlashCardController {
     public ResponseEntity<FlashCardModel> updateFlashCard(@PathVariable Long projectId,
                                                           @PathVariable Long collectionId,
                                                           @PathVariable Long id,
-                                                          @RequestBody FlashCard flashCard) {
-        FlashCard updated = flashCardService.updateFlashCard(projectId, collectionId, id, flashCard);
+                                                          @RequestBody FlashCard flashCard,
+                                                          @AuthenticationPrincipal User user) {
+        FlashCard updated = flashCardService.updateFlashCard(projectId, collectionId, id, flashCard, user);
         return ResponseEntity.ok(flashCardMapper.apply(updated));
     }
 
     @DeleteMapping("/{id}")
-    public void deleteFlashCard(@PathVariable Long id) {
-        flashCardService.deleteFlashCard(id);
+    public void deleteFlashCard(@PathVariable Long projectId,
+                                @PathVariable Long id,
+                                @AuthenticationPrincipal User user) {
+        flashCardService.deleteFlashCard(projectId, id, user);
     }
 
     private String baseUri() {
